@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-16T08:09:00Z",
-  "count_outdated" : 1784,
-  "uniques_outdated" : 542,
+  "timestamp" : "2022-09-16T16:07:50Z",
+  "count_outdated" : 1785,
+  "uniques_outdated" : 543,
   "count" : 1810,
   "uniques" : 557,
   "clones" : [
-    {
-      "timestamp": "2022-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-04T00:00:00Z",
       "count": 1,
