@@ -1,3 +1,11 @@
+2022-09-16T16:07:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3069194207
+* notice: last 14d: unq all: 5 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 542 1784 / 557 1810
+* notice: next accum: outdated-unq outdated-all / unq all: 543 1785 / 557 1810
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-02] / []
+
 2022-09-16T08:09:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3066341661
 * notice: last 14d: unq all: 5 26
